Structure des view et guard

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,17 +8,17 @@
     <ion-content>
       <ion-list>
         <ion-menu-toggle>
-          <ion-item routerLink="">
+          <ion-item routerLink="ouvrire-compte">
             <ion-label>Ouvrire un compte</ion-label>
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle>
-          <ion-item  routerLink="">
+          <ion-item  routerLink="consulter-compte">
             <ion-label>Consulter compte</ion-label>
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle>
-          <ion-item  routerLink="">
+          <ion-item  routerLink="a-propos">
             <ion-label>A propos</ion-label>
           </ion-item>
         </ion-menu-toggle>
