--- a/src/app/view/consulter-compte/consulter-compte.page.html
+++ b/src/app/view/consulter-compte/consulter-compte.page.html
@@ -8,5 +8,19 @@
 </ion-header>
 
 <ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <ion-item>
+          <ion-button (click)="depot()">Dépot</ion-button>
+        </ion-item>
+      </ion-col>
 
+      <ion-col>
+        <ion-item>
+          <ion-button (click)="retrait()">Retrait</ion-button>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
