--- a/src/app/view/consulter-compte/consulter-compte.page.html
+++ b/src/app/view/consulter-compte/consulter-compte.page.html
@@ -12,14 +12,73 @@
     <ion-row>
       <ion-col>
         <ion-item>
-          <ion-button (click)="depot()">Dépot</ion-button>
+          <ion-label>Solde total : </ion-label>  
+          <ion-input readonly placeholder="50 €"></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col>
+        <ion-item>
+          <ion-label>Solde du premier compte : </ion-label>  
+          <ion-input readonly placeholder="50 €"></ion-input>
         </ion-item>
       </ion-col>
 
       <ion-col>
         <ion-item>
-          <ion-button (click)="retrait()">Retrait</ion-button>
+          <ion-label>Découvert autorisé : </ion-label>  
+          <ion-input placeholder="50 €"></ion-input>
         </ion-item>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col>
+        <ion-item>
+          <ion-label>Solde du deuxieme compte : </ion-label>  
+          <ion-input readonly placeholder="50 €"></ion-input>
+        </ion-item>
+      </ion-col>
+      
+      <ion-col>
+        <ion-item>
+          <ion-label>Découvert autorisé : </ion-label>  
+          <ion-input readonly placeholder="50 €"></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col>
+        <ion-list>
+          <ion-list-header lines="inset"> 
+            <ion-toolbar>
+              <ion-buttons slot="end">   <ion-button (click)="depot()"><ion-icon size="large" name="add-outline"></ion-icon></ion-button>
+                <ion-button (click)="retrait()"><ion-icon size="large" name="remove-outline"></ion-icon></ion-button>
+            
+              </ion-buttons>
+            </ion-toolbar>
+          </ion-list-header>
+  
+          <ion-grid>
+            <ion-row *ngFor="let operation of operations">
+              <ion-col>
+                {{ operation.date }}
+              </ion-col>
+              <ion-col>
+                {{ operation.compte }}
+              </ion-col>
+              <ion-col>
+                {{ operation.type }}
+              </ion-col>
+              <ion-col>
+                {{ operation.montant }}
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </ion-list>
       </ion-col>
     </ion-row>
   </ion-grid>
