connexion et guards

--- a/src/app/view/consulter-compte/consulter-compte.page.html
+++ b/src/app/view/consulter-compte/consulter-compte.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>consulterCompte</ion-title>
+    <ion-title>Etat des comptes</ion-title>
     <ion-menu-button menu="main-menu" slot="start"></ion-menu-button>
     <!-- <ion-item *ngIf="" lines="none" button (click)="" slot="end"><ion-icon name="log-in-outline"></ion-icon></ion-item> -->
     <!-- <ion-item *ngIf="" lines="none" button (click)="" slot="end"><ion-icon name="log-out-outline"></ion-icon></ion-item> -->
@@ -55,9 +55,9 @@
         <ion-list>
           <ion-list-header lines="inset"> 
             <ion-toolbar>
-              <ion-buttons slot="end">   <ion-button (click)="depot()"><ion-icon size="large" name="add-outline"></ion-icon></ion-button>
+              <ion-buttons slot="end">   
+                <ion-button (click)="depot()"><ion-icon size="large" name="add-outline"></ion-icon></ion-button>
                 <ion-button (click)="retrait()"><ion-icon size="large" name="remove-outline"></ion-icon></ion-button>
-            
               </ion-buttons>
             </ion-toolbar>
           </ion-list-header>
