--- a/src/app/view/connexion/connexion.page.html
+++ b/src/app/view/connexion/connexion.page.html
@@ -1,9 +1,38 @@
-<ion-header>
+<ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>connexion</ion-title>
+    <ion-title>Connection</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-item lines="none">
+    <ion-grid>
+      <ion-row>
+        <ion-col size="6" offset="3">
+          <ion-item>
+            <ion-label position="floating">Identifiant</ion-label>
+            <ion-input [(ngModel)]="id"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
 
+      <ion-row>
+        <ion-col size="6" offset="3">
+          <ion-item>
+            <ion-label position="floating">Mot de passe</ion-label>
+            <ion-input [(ngModel)]="password" type="password"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col size="6" offset="3">
+          <ion-item lines="none">
+            <ion-button slot="end" (click)="logIn()" color="primary">Connexion</ion-button>
+            <ion-button slot="end" (click)="signIn()" fill="outline" color="secondary">Crée un compte</ion-button>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-item>
 </ion-content>
