--- a/src/app/view/ouvrire-compte/ouvrire-compte.page.html
+++ b/src/app/view/ouvrire-compte/ouvrire-compte.page.html
@@ -23,7 +23,7 @@
       <ion-col>
         <ion-item *ngIf="isCompteJoin">
           <ion-label>Deuxieme utilisateur : </ion-label>  
-          <ion-select>
+          <ion-select [(ngModel)]="user2">
             <ion-select-option value="1">user 1 </ion-select-option>
             <ion-select-option value="2">user 2</ion-select-option>
           </ion-select>
@@ -35,7 +35,7 @@
       <ion-col>
         <ion-item>
           <ion-label>Decouvert autorisé : </ion-label>  
-          <ion-input readonly placeholder="50 €"></ion-input>
+          <ion-input [(ngModel)]="decouvert" min="0" max="999" type="number" placeholder="50 €"></ion-input>
         </ion-item>
       </ion-col>
     </ion-row>
@@ -44,14 +44,14 @@
       <ion-col>
         <ion-item>
           <ion-label>Montant du premier depot : </ion-label>  
-          <ion-input readonly placeholder="50 €"></ion-input>
+          <ion-input [(ngModel)]="depot" min="0" type="number" placeholder="50 €"></ion-input>
         </ion-item>
       </ion-col>
     </ion-row>
 
     <ion-row>
       <ion-col offset="6">
-        <ion-button expand="block">Crée le compte</ion-button>
+        <ion-button (click)="creeCompte()" expand="block">Crée le compte</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
